--- a/package.json
+++ b/package.json
@@ -11,13 +11,37 @@
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "postcss": "^8.5.6",
+        "postcss-preset-mantine": "^1.18.0",
+        "postcss-simple-vars": "^7.0.1",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
     },
     "dependencies": {
         "@inertiajs/react": "^2.3.15",
+        "@mantine/carousel": "^8.3.15",
+        "@mantine/charts": "^8.3.15",
+        "@mantine/code-highlight": "^8.3.15",
+        "@mantine/core": "^8.3.15",
+        "@mantine/dates": "^8.3.15",
+        "@mantine/dropzone": "^8.3.15",
+        "@mantine/form": "^8.3.15",
+        "@mantine/hooks": "^8.3.15",
+        "@mantine/modals": "^8.3.15",
+        "@mantine/notifications": "^8.3.15",
+        "@mantine/nprogress": "^8.3.15",
+        "@mantine/spotlight": "^8.3.15",
+        "@mantine/tiptap": "^8.3.15",
+        "@tiptap/extension-link": "^3.20.0",
+        "@tiptap/pm": "^3.20.0",
+        "@tiptap/react": "^3.20.0",
+        "@tiptap/starter-kit": "^3.20.0",
         "@vitejs/plugin-react": "^5.1.4",
+        "dayjs": "^1.11.19",
+        "embla-carousel": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "react": "^19.2.4",
-        "react-dom": "^19.2.4"
+        "react-dom": "^19.2.4",
+        "recharts": "^3.7.0"
     }
 }
