--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@mantine/nprogress": "^8.3.15",
         "@mantine/spotlight": "^8.3.15",
         "@mantine/tiptap": "^8.3.15",
+        "@tabler/icons-react": "^3.37.1",
         "@tiptap/extension-link": "^3.20.0",
         "@tiptap/pm": "^3.20.0",
         "@tiptap/react": "^3.20.0",
